<resources>
    <string name="app_name">Rick&amp;Morty</string>

    <string name="arrow_back_description">Arrow indicating to go back on view stack</string>
    <string name="arrow_next_description">Arrow indicating that item has more information</string>
    <string name="search_icon_description">A search icon that is used to trigger search engine</string>
    <string name="refresh_icon_description">A refresh icon that is used to refresh a call that had any error loading</string>

    <string name="main_activity_card_characters">Characters</string>
    <string name="main_activity_card_locations">Locations</string>
    <string name="main_activity_card_episodes">Episodes</string>

    <string name="main_activity_title_description">Logo of Rick and Morty animated series</string>
    <string name="main_activity_character_description">Representation of a character of the series</string>
    <string name="main_activity_location_description">Representation of a location of the series</string>
    <string name="main_activity_episode_description">Representation of an episode of the series</string>

    <string name="catalogue_character_search_hint">Search character</string>
    <string name="catalogue_location_search_hint">Search location</string>
    <string name="catalogue_episode_search_hint">Search episode</string>
    <string name="catalogue_empty_state_image_description">A scene of the eighth episode of the third season, morty`s mind blowers. Morty is activating a red memory capsule.</string>
    <string name="catalogue_empty_state_description">Looks like you have experienced an unpleasant error. Just try again and we remove this bad memory of yours.</string>
    <string name="catalogue_empty_state_button">Try again</string>

    <string name="character_card_species">Species: %s</string>
    <string name="character_card_gender">Gender: %s</string>
    <string name="character_card_status">Status: %s</string>

    <string name="location_card_type">Type: %s</string>
    <string name="location_card_dimension">Dimension: %s</string>

    <string name="episode_card_air_date">Air date: %s</string>

    <string name="character_detail_image_description">Representation of %s</string>

    <string name="character_detail_creation_date">Creation date: %s</string>
    <string name="character_detail_gender">Gender: %s</string>
    <string name="character_detail_location">Last known location: %s</string>
    <string name="character_detail_origin">Origin location: %s</string>
    <string name="character_detail_species">Species: %s</string>
    <string name="character_detail_status">Status: %s</string>
    <string name="character_detail_type">Type: %s</string>
    <string name="character_detail_episode_list">Episodes:</string>
    <string name="character_detail_episode_empty_list">No episodes found</string>

    <string name="location_detail_creation_date">Creation date: %s</string>
    <string name="location_detail_dimension">Dimension: %s</string>
    <string name="location_detail_type">Type: %s</string>
    <string name="location_detail_resident_list">Residents:</string>

    <string name="episode_detail_creation_date">Creation date: %s</string>
    <string name="episode_detail_air_date">Air date: %s</string>
    <string name="episode_detail_episode">Episode: %s</string>
    <string name="episode_detail_character_list">Characters:</string>
    <string name="episode_detail_character_empty_list">No characters found</string>

</resources>
