<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/img_rick_morty"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCharacter"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:clickable="true"
        android:elevation="@dimen/material_component_cards_small_elevation"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mediumGreen"
        app:cardCornerRadius="@dimen/material_component_cards_great_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCharacters"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:src="@drawable/img_character"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCharacters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:text="@string/main_activity_card_characters"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/material_typography_headline"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCharacters"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLocations"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:clickable="true"
        android:elevation="@dimen/material_component_cards_small_elevation"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mediumGreen"
        app:cardCornerRadius="@dimen/material_component_cards_great_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCharacter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLocations"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:src="@drawable/img_character"
                android:background="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLocations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:text="@string/main_activity_card_locations"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/material_typography_headline"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivLocations"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEpisodes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_padding_small"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:layout_marginEnd="@dimen/margin_padding_small"
        android:clickable="true"
        android:elevation="@dimen/material_component_cards_small_elevation"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/mediumGreen"
        app:cardCornerRadius="@dimen/material_component_cards_great_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvLocations">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEpisodes"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:src="@drawable/img_character"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEpisodes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:text="@string/main_activity_card_episodes"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/material_typography_headline"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivEpisodes"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>